# uniface

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MODELS.md  QUICKSTART.md  README.md  mkdocs.yml  pyproject.toml  requirements.txt  requirements_mkdocs.txt  setup.py  test.py
.github/workflows/: build.yml  ci.yml  docs.yml  pipeline.yml  publish.yml  release.yml
demo/: README.md  app.py  requirements.txt
docs/: 404.html  API_REFERENCE.md  ARCHITECTURE.md  INDEX.md  TECH_DEBT.md  USER_GUIDE.md  changelog.md  contributing.md  datasets.md  faq.md  index.html  index.md  installation.md  license-attribution.md  models.md  notebooks.md  overview.md  quickstart.md  sitemap.xml  troubleshooting.md  usage.md
docs/about/: changelog.md  conduct.md  license.md
docs/api/: reference.md
docs/api/reference/: index.html
docs/changelog/: index.html
docs/concepts/: coordinate-systems.md  execution-providers.md  inputs-outputs.md  model-cache-offline.md  overview.md  thresholds-calibration.md
docs/concepts/coordinate-systems/: index.html
docs/concepts/execution-providers/: index.html
docs/concepts/inputs-outputs/: index.html
docs/concepts/model-cache-offline/: index.html
docs/concepts/overview/: index.html
docs/contributing/: index.html
docs/datasets/: index.html
docs/faq/: index.html
docs/installation/: index.html
docs/license-attribution/: index.html
docs/models/: age_gender.md  detection.md  gaze.md  index.html  landmarks.md  recognition.md
docs/modules/: attributes.md  detection.md  gaze.md  headpose.md  indexing.md  landmarks.md  matting.md  parsing.md  privacy.md  quality.md  recognition.md  spoofing.md  stores.md  tracking.md
docs/notebooks/: index.html
docs/overrides/: home.html  main.html
docs/quickstart/: index.html
docs/recipes/: anonymize-stream.md  batch-processing.md  custom-models.md  face-search.md  image-pipeline.md  video-webcam.md
docs/reference/: attribute.md  detection.md  landmark.md  recognition.md  uniface.md
docs/search/: search_index.json
docs/stylesheets/: extra.css
docs/troubleshooting/: index.html
docs/tutorials/: integration.md  performance.md  quickstart.md
examples/: 01_face_detection.ipynb  02_face_alignment.ipynb  03_face_verification.ipynb  04_face_search.ipynb  05_face_analyzer.ipynb  06_face_parsing.ipynb  07_face_anonymization.ipynb  08_gaze_estimation.ipynb  09_face_segmentation.ipynb  10_face_vector_store.ipynb  11_head_pose_estimation.ipynb  12_face_recognition.ipynb  13_portrait_matting.ipynb  face_alignment.ipynb  face_analyzer.ipynb  face_detection.ipynb  face_parsing.ipynb  face_search.ipynb  face_verification.ipynb  gaze_estimation.ipynb
notebooks/: benchmark_mlx_vs_onnx.ipynb  face_detection_tutorial.ipynb  test.ipynb
retinaface/: __init__.py  common.py  config.py  constants.py  log.py  model_store.py  retinaface.py  retinaface_v2.py  utils.py  version.py
scripts/: README.md  TESTING.md  batch_process.py  benchmark_mlx_vs_onnx.py  convert_onnx_to_mlx.py  convert_pytorch_to_mlx.py  convert_weights_to_mlx.py  debug_fpn_pathway.py  demo_detection.py  download_model.py  download_pytorch_weights.py  face_detection_demo.py  release.sh  run_age_gender.py  run_anonymization.py  run_detection.py  run_emotion.py  run_face_analyzer.py  run_face_parsing.py  run_face_search.py  run_face_tracking.py  run_fairface.py  run_gaze_estimation.py  run_inference.py  run_landmarks.py  run_recognition.py  run_spoofing.py  run_video_detection.py  search_face.py  sha256_generate.py  test_mlx_detection.py  validate_mlx_accuracy.py  verify_numerical_parity.py
tests/: test_age_gender.py  test_draw.py  test_factory.py  test_faiss_store.py  test_headpose.py  test_landmark.py  test_matting.py  test_parsing.py  test_pipnet_landmark.py  test_quality.py  test_recognition.py  test_retinaface.py  test_scrfd.py  test_types.py  test_utils.py
tools/: README.md  _common.py  age_gender.py  analyze.py  anonymize.py  attribute.py  batch_process.py  detect.py  detection.py  download_model.py  emotion.py  face_analyzer.py  face_anonymize.py  face_emotion.py  face_parsing.py  face_search.py  fairface.py  faiss_search.py  gaze.py  gaze_estimation.py  headpose.py  landmarks.py  parse.py  quality.py  recognition.py  recognize.py  search.py  spoofing.py  track.py  video_detection.py  xseg.py
uniface/: __init__.py  alignment.py  analyzer.py  backend.py  common.py  constants.py  draw.py  face.py  face_utils.py  log.py  mlx_utils.py  model_store.py  onnx_utils.py  retinaface.py  types.py  version.py  visualization.py
uniface-cpp/: .clang-format  CMakeLists.txt  README.md
uniface-cpp/examples/: CMakeLists.txt  analyzer.cpp  detect.cpp  landmarks.cpp  recognize.cpp  webcam.cpp
uniface-cpp/include/uniface/: analyzer.hpp  detector.hpp  landmarker.hpp  recognizer.hpp  types.hpp  uniface.hpp  utils.hpp
uniface-cpp/src/: analyzer.cpp  detector.cpp  landmarker.cpp  recognizer.cpp  utils.cpp
uniface/attribute/: __init__.py  age_gender.py  age_gender_mlx.py  base.py  emotion.py  emotion_mlx.py  fairface.py  models.py
uniface/detection/: __init__.py  base.py  retinaface.py  retinaface_mlx.py  scrfd.py  scrfd_mlx.py  utils.py  yolov5.py  yolov5_mlx.py  yolov8.py
uniface/gaze/: __init__.py  base.py  models.py
uniface/headpose/: __init__.py  base.py  models.py
uniface/indexing/: __init__.py  faiss.py
uniface/landmark/: __init__.py  _meanface.py  base.py  model.py  models.py  models_mlx.py  pipnet.py
uniface/matting/: __init__.py  base.py  modnet.py
uniface/nn/: __init__.py  backbone.py  conv.py  fpn.py  head.py
uniface/parsing/: __init__.py  base.py  bisenet.py  utils.py  xseg.py
uniface/privacy/: __init__.py  blur.py
uniface/quality/: __init__.py  base.py  ediffiqa.py
uniface/recognition/: __init__.py  adaface.py  arcface.py  base.py  base_mlx.py  edgeface.py  encoder.py  mobileface.py  models.py  models_mlx.py  sphereface.py
uniface/spoofing/: __init__.py  base.py  minifasnet.py
uniface/stores/: __init__.py  base.py  faiss.py
uniface/tracking/: __init__.py
(+26 files in other folders)
