[project]
name = "mlx-uniface"
version = "1.0.0"
description = "MLX-UniFace: Blazing-fast face analysis on Apple Silicon with MLX backend"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Yakhyokhuja Valikhujaev", email = "yakhyo9696@gmail.com" },
    { name = "Behnam Ebrahimi" },
]
maintainers = [
    { name = "Behnam Ebrahimi" },
]

requires-python = ">=3.10,<3.14"
keywords = [
    "face-detection",
    "face-recognition",
    "facial-landmarks",
    "age-detection",
    "gender-detection",
    "computer-vision",
    "deep-learning",
    "onnx",
    "onnxruntime",
    "mlx",
    "apple-silicon",
    "face-analysis",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "numpy>=1.21.0",
    "opencv-python>=4.5.0",
    "scikit-image>=0.19.0",
    "requests>=2.28.0",
    "tqdm>=4.64.0",
    "safetensors>=0.4.0",
]

[project.optional-dependencies]
# MLX backend for Apple Silicon (M1/M2/M3/M4) - blazing fast inference
mlx = ["mlx>=0.20.0"]
# ONNX Runtime backend for cross-platform support
onnx = ["onnx>=1.12.0", "onnxruntime>=1.16.0"]
# ONNX with GPU acceleration (NVIDIA CUDA)
gpu = ["onnx>=1.12.0", "onnxruntime-gpu>=1.16.0"]
# Development dependencies
dev = ["pytest>=7.0.0", "ruff>=0.4.0"]
# All backends (for testing)
all = ["mlx>=0.20.0", "onnx>=1.12.0", "onnxruntime>=1.16.0"]

[project.urls]
Homepage = "https://github.com/CodeWithBehnam/mlx-uniface"
Repository = "https://github.com/CodeWithBehnam/mlx-uniface"
Documentation = "https://github.com/CodeWithBehnam/mlx-uniface/blob/main/README.md"
"Original UniFace" = "https://github.com/yakhyo/uniface"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = { where = ["."], include = ["uniface*"] } }

[tool.setuptools.package-data]
uniface = ["py.typed"]

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    ".git",
    ".ruff_cache",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    ".venv",
    "venv",
    ".pytest_cache",
    ".mypy_cache",
    "*.ipynb",
]

[tool.ruff.format]
quote-style = "single"


[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.isort]
known-first-party = ["uniface"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
